package lab8.task4;

import java.util.Iterator;

public abstract class Object_Component {
    
    public abstract void render();
    public abstract float volume();
    public abstract Iterator createIterator();
}
